; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_syscalls.c_sys_bindat.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_syscalls.c_sys_bindat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.bindat_args = type { i32, i32, i32, i32 }
%struct.sockaddr = type { i32 }

@M_SONAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_bindat(%struct.thread* %0, %struct.bindat_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.bindat_args*, align 8
  %5 = alloca %struct.sockaddr*, align 8
  %6 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.bindat_args* %1, %struct.bindat_args** %4, align 8
  %7 = load %struct.bindat_args*, %struct.bindat_args** %4, align 8
  %8 = getelementptr inbounds %struct.bindat_args, %struct.bindat_args* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.bindat_args*, %struct.bindat_args** %4, align 8
  %11 = getelementptr inbounds %struct.bindat_args, %struct.bindat_args* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @getsockaddr(%struct.sockaddr** %5, i32 %9, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %29

16:                                               ; preds = %2
  %17 = load %struct.thread*, %struct.thread** %3, align 8
  %18 = load %struct.bindat_args*, %struct.bindat_args** %4, align 8
  %19 = getelementptr inbounds %struct.bindat_args, %struct.bindat_args* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.bindat_args*, %struct.bindat_args** %4, align 8
  %22 = getelementptr inbounds %struct.bindat_args, %struct.bindat_args* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %25 = call i32 @kern_bindat(%struct.thread* %17, i32 %20, i32 %23, %struct.sockaddr* %24)
  store i32 %25, i32* %6, align 4
  %26 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %27 = load i32, i32* @M_SONAME, align 4
  %28 = call i32 @free(%struct.sockaddr* %26, i32 %27)
  br label %29

29:                                               ; preds = %16, %2
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @getsockaddr(%struct.sockaddr**, i32, i32) #1

declare dso_local i32 @kern_bindat(%struct.thread*, i32, i32, %struct.sockaddr*) #1

declare dso_local i32 @free(%struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
